// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParagraphContainer should render correctly 1`] = `
@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    padding-right: 2.5rem;
  }
}

.emotion-2 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-2:focus,
.emotion-2:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

<div>
  <div
    class="emotion-6 emotion-7"
    dir="ltr"
  >
    <p
      class="emotion-4 emotion-5"
    >
      <b>
        This is some text.
      </b>
      <a
        class="emotion-2 emotion-3"
        href="/bbc-test"
      >
        Some text
        <b>
           for the 
        </b>
        <i
          class="emotion-0 emotion-1"
        >
           link!
        </i>
      </a>
    </p>
  </div>
</div>
`;

exports[`ParagraphContainer should render correctly with inline block 1`] = `
@media (max-width:14.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-6 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-6 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-6 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-6 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .emotion-6 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-6 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:63rem) {
  .emotion-4 {
    padding-right: 2.5rem;
  }
}

.emotion-0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-0:focus,
.emotion-0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.emotion-2 {
  padding-bottom: 1.5rem;
  margin: 0;
}

<div>
  <div
    class="emotion-6 emotion-7"
    dir="ltr"
  >
    <p
      class="emotion-4 emotion-5"
    >
      <b>
        This is some text.
      </b>
      <span
        class="emotion-2 emotion-3"
        lang="fa"
      >
        <a
          aria-label="چیسربرگرundefined"
          class="emotion-0 emotion-1"
          href="https://google.com"
        >
          چیسربرگر
        </a>
      </span>
    </p>
  </div>
</div>
`;
